test/files/neg/t1503.check
t1503.scala:7: warning: The value matched by Whatever is bound to n, which may be used under the
unsound assumption that it has type Whatever.type, whereas we can only safely
count on it having type Any, as the pattern is matched using `==` (see SI-1503).
  def matchWhateverCCE(x: Any) = x match { case n @ Whatever => n }
                                                    ^
error: No warnings can be incurred under -Xfatal-warnings.
one warning found
one error found
